replaced goa default response encoder so xml can be encoded once by gorilla/feeds
